--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "async": "^2.3.0",
     "ini": "^1.3.0",
+    "lodash.camelcase": "^4.3.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
@@ -37,7 +38,9 @@
     "coveralls": "cat coverage/lcov.info | coveralls",
     "lint": "eslint ."
   },
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "engines": {
     "node": ">= 0.4.0"
   },
