--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nconf",
   "description": "Hierarchical node.js configuration with files, environment variables, command-line arguments, and atomic object merging.",
-  "version": "0.9.1",
+  "version": "0.11.0",
   "author": "Charlie Robbins <charlie.robbins@gmail.com>",
   "contributors": [
     "Matt Hamann <matthew.hamann@gmail.com>",
@@ -21,6 +21,7 @@
   "dependencies": {
     "async": "^2.3.0",
     "ini": "^1.3.0",
+    "lodash.camelcase": "^4.3.0",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
@@ -37,7 +38,9 @@
     "coveralls": "cat coverage/lcov.info | coveralls",
     "lint": "eslint ."
   },
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "engines": {
     "node": ">= 0.4.0"
   },
