--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nconf",
   "description": "Hierarchical node.js configuration with files, environment variables, command-line arguments, and atomic object merging.",
-  "version": "0.11.12",
+  "version": "1.0.0",
   "author": "Charlie Robbins <charlie.robbins@gmail.com>",
   "contributors": [
     "Matt Hamann <matthew.hamann@gmail.com>",
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/flatiron/nconf.git"
+    "url": "git+https://github.com/mp-ffx/nconf.git"
   },
   "keywords": [
     "configuration",
